Cabiar titulo en <head>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    <title>Vite + React</title>
+    <title>Recoger Paquetes</title>
   </head>
   <body>
     <div id="root"></div>
